--- a/index.html
+++ b/index.html
@@ -106,17 +106,20 @@
       bottom: 100%;
       right: 0;
       margin-bottom: 8px;
-      width: 230px;
+      width: 240px;
       background: white;
       border: 1px solid #ccc;
-      padding: 7px 8px;
+      padding: 10px 12px;
       font-size: 11px;
-      border-radius: 4px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.2);
+      border-radius: 6px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.25);
       display: none;
-      z-index: 1150;
+      z-index: 2000;
       pointer-events: auto;
+      color: #222;
+      line-height: 1.3;
       user-select: none;
+      word-wrap: break-word;
     }
     .legend {
       position: absolute;
